# F1-Notif-Bot

./: .cargo-deny.yml  .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Shuttle.toml  compose.dev.yaml  compose.yaml  config.toml  deny.toml  rustfmt.toml
.sqlx/: query-02168c12dc26607a38de0bcfb82165289440e190cea51b1e92699e017bd4d2f4.json  query-026e64e27bec0d56b01f3c3678236d76ef096959f0eef351345a5b6fcac32594.json  query-091827d882c7758e12466b469a07cc567448e8b1927fc664f906afec56f36c2a.json  query-0b3815ce350999376dee186498ec95b9cf970d634c850db97e3d162b7fb70ed2.json  query-1c9acf6235eb1353d35ddeda396a88a65b8583b7abbe6d2f77d23092ac658af6.json  query-2d8bd3ea617f9a262489ff2d3770cb9a19b9a582957bb62afcb4cfdf2ef377f6.json  query-32773f35ec820ac06008999f08f47924afc2d1195952a693c944a0619f774909.json  query-3c164de164b4216acaea56b2bc048e9c2b65ec6895606db87212785be9a92c16.json  query-40bb903422d76c18d7ed645497dc281d33b570862e12817937b26b9b68c1d963.json  query-4254e43ffa92e8dbecc5bc884cabc68cf3cf6fe0561c7fa527cbb86d948ab7a6.json  query-472f61b8b1262f85ccacdf89b66789ea486de1a185d02b5840d17450e115dab7.json  query-4b328d05bac27118e14b834a8579ea1a013e6daab2faee7147faa724b772dede.json  query-52362c8cfcfd079dbfab80ee6ef4a44c2b97c4d4892ec8aa204835d0d102a66f.json  query-54bb9ab058fe80640fd39fca3c28cc8b74ed8c8dbbbb9aa459c1e4590a7da6ab.json  query-5a5d432b69c4543cc94304304328e7010e5b2424ff2a328b698d72374067bcbc.json  query-6519189d7ddd5d147d9d77aad2622688711f4f1c94a5d22cb4fe131c9dbd8213.json  query-699a4e47ae615db2e040715fa6ceb88a351ff1cfd2bcaadacca4a256dfc2dac6.json  query-6e97fdfbba9c56277c4fb8a1c434214d04c79822863c92199d43c3e7a07869ee.json  query-6fe2793f5a05386e673fcf4ca4fc4cac5ba0f9c0c91e6cd7001acf5c5d6f6e48.json  query-6feb30df330b4b043d24b904814e7db67989af5340f2dbae65ab9f90bb6e314b.json  query-8668df3ac02955442c3f2f0756844a21766ad839ed29f3ed3983e61cf30630f8.json  query-9529902cf655c4ee8c396c14bdcd48353f9f7fe89c8c9ff475a31a7acd505c02.json  query-a29a5ddacfc8e46e46fdfbf2869f44b801e265b9418aac45100330ae2ca79729.json  (+15 more)
docker/: Dockerfile.bot
src/: error.rs  (+1 more)
(+13 files in other folders)
