[package]
name = "f1-notif-bot"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", version = "0.12.4" }
sqlx = { version = "0.8.2", features = ["chrono", "mysql", "runtime-tokio", "runtime-tokio-rustls"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
