[package]
name = "f1-notif-bot"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "f1-notif-bot"

[[bin]]
path = "tools/migrate.rs"
name = "migrate"

[[bin]]
path = "tools/docker-build.rs"
name = "docker-build"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
f1-bot-types = { git = "https://github.com/MarkusTheOrt/f1-bot-types", version = "0.1.0" }
libsql = "0.9.24"
serde = { version = "1.0.228", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", version = "0.12.4" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
